src/client/styles/header.scss
@use "vars" as v;
@use "animation" as a;


.header {
  background-color: v.$colour-dark;
  display: flex;
  flex-direction: column;
  align-items: center;

  &-1,
  &-2 {
    width: 100%;
  }

  &-title {
    padding: v.$padding;

    h1 {
      margin: 0;
      color: v.$colour-lightest;
      text-align: center;
    }
  }

  &-nav-ul {
    list-style: none;
    margin: 0;
  }

  a {
    text-decoration: none;

    &:hover {
      animation-name: none;  // disable main.scss anim
    }
  }

  &-nav-li-button {
    $mobile-bgc: scale-color(v.$colour-dark, $lightness: +20%);
    background-color: $mobile-bgc;
    padding: 0.8em 0;

    &:hover {
      @include a.fade(background-color, $mobile-bgc, v.$colour-highlight);
    }

    i {
      display: none;
    }

    p {
      margin: 0;
      font-size: 1.2em;
      text-align: center;
      color: v.$colour-lightest;
      font-family: v.$font;
    }
  }
}


@media only screen and (min-width: v.$tablet-min-width) {

.header {
  flex-direction: row;
  position: fixed;
  top: 0;
  width: 100%;
  max-width: v.$max-width;
  opacity: 0.95;
  @include v.shadow(8px);

  &-title {
    padding: 0;
    padding-left: v.$padding;

    h1 {
      text-align: left;
      font-size: 3.0em;
    }
  }

  &-nav-ul {
    display: flex;
    float: right;
    justify-content: space-around;
    width: 100%;
  }

  &-nav-li-button {
    background-color: unset;
    padding: 1.4rem;

    i {
      display: flex;
      flex-direction: column;
      align-items: center;
      font-size: 2.0em;
      color: v.$colour-lightest;
    }
  }
}

}  // @media

